# adamar1

./: .gitignore  README.md  pyproject.toml
experiments/: run_experiment.py
notebooks/: exploration.ipynb
src/wht_forecast/: __init__.py  baselines.py  blocks.py  cli.py  data_loader.py  experiment.py  filtering.py  forecasting.py  hadamard.py  metrics.py  synthetic_data.py  trace_log.py  transform.py  visualization.py
